# Aeon-snowfall

./: .gitignore  .sops.yaml  .typos.toml  Justfile  LICENSE  README.md  _typos.toml  cargo-generate.toml  flake.nix  statix.toml  vm
.github/workflows/: typos.yml
homes/x86_64-install-iso/mxxntype@virus/: default.nix
homes/x86_64-linux/mxxntype@Luna/: default.nix
homes/x86_64-linux/mxxntype@foghorn/: default.nix
homes/x86_64-linux/mxxntype@illusion/: default.nix
homes/x86_64-linux/mxxntype@luna/: default.nix
homes/x86_64-linux/mxxntype@raiden/: default.nix
homes/x86_64-linux/mxxntype@wyrm/: default.nix
lib/: secrets.yaml
lib/default/: default.nix
lib/generators/docs-rs-stylesheet/: default.nix
lib/generators/stylesheets/: default.nix
lib/generators/wallpapers/: default.nix
lib/nu-aeon/: default.nix
lib/themes/: catppuccin-mocha.nix  default.nix
lib/themes/catppuccin-mocha/: default.nix
lib/themes/dark-plus/: default.nix
lib/themes/evangelion/: default.nix
lib/themes/everforest-twilight/: default.nix
lib/themes/kanagawa-dragon/: default.nix
lib/themes/kanagawa-wave/: default.nix
lib/themes/miasma/: default.nix
overlays/disko/: default.nix
overlays/unstable/: default.nix
scripts/: run-illusion-vm
shells/bootstrap/: default.nix
shells/default/: default.nix
shells/rust-gui/: default.nix
templates/rust/: .gitignore  Cargo.toml  cargo-generate.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
templates/rust/src/: main.rs
templates/typst/: .gitignore  Justfile  cargo-generate.toml  lib.typ  prettypst.toml  typst.toml
(+137 files in other folders)
